--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?ljilha#1" target="_blank">首页</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/1?tzvjqdvc" target="_blank">动态网</a> | <a href="https://d22qnxkzs9qeoh.cloudfront.net/2?lrzmnucyi" target="_blank">大纪元</a> | <a href="https://dycmgeziwp90b.cloudfront.net/4?ktdlh" target="_blank">看中国</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/pHh5q?chyjxbtwx" target="_blank">新生网</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/tktpt?faybh" target="_blank">阿波罗网</a> | <a href="https://d3myewunzonann.cloudfront.net/Mjpvu?kvjhqr" target="_blank">干净世界</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/10?qphoqzsm" target="_blank">退党服务</a> | <a href="https://dtjix0ckmebpi.cloudfront.net/Rffqf?yoikr" target="_blank">明慧广播</a> | <a href="https://d78f5frq5siq8.cloudfront.net/nw9Vn?tyixbjnii" target="_blank">传奇时代</a> | <a href="https://divmj5v44rbg.cloudfront.net/AF9AG?baldtou" target="_blank">新境界影视</a> | <a href="https://dvsmtoxipy5i5.cloudfront.net/zqMQA?fciqnnq" target="_blank">文昭谈论</a> | <a href="https://d26llhbq1ka51o.cloudfront.net/7?rsbcif" target="_blank">明慧</a></p><p><a href="https://d3d2r098q79b5l.cloudfront.net/9?pmgqxqi" target="_blank">大法</a> | <a href="https://d37g5boc7rm625.cloudfront.net/3?retym" target="_blank">新唐人</a> | <a href="https://d1fejrztdgsube.cloudfront.net/obAhT?nehgsgs" target="_blank">人民报</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/xXNHu?slpmq" target="_blank">放光明</a> | <a href="https://d2rhftayg1puwj.cloudfront.net/5?hwadpro" target="_blank">新纪元</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/6?xvoljyzmh" target="_blank">希望之声</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/11?yhhsgkwz" target="_blank">无界网络</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/Pueji?tzeablqqy" target="_blank">追查国际</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/16?ehopjjqfc" target="_blank">明慧之窗</a> | <a href="https://d3caox32lipp7h.cloudfront.net/LdvzZ?oxrpfwr" target="_blank">细语人生</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/fBn3r?ezavlyyzv" target="_blank">新世纪影视</a> | <a href="https://d3gus727acem18.cloudfront.net/PUWMb?etmskx" target="_blank">江峰时刻</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/8?ajywiz" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?dplolm#1" target="_blank">首页</a> | <a href="https://d1ff3ajoaf61nd.cloudfront.net/1?vrqbjwtri" target="_blank">动态网</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/2?ijneww" target="_blank">大纪元</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/4?orqpi" target="_blank">看中国</a> | <a href="https://d3t1om6knkjnq4.cloudfront.net/pHh5q?mdjineq" target="_blank">新生网</a> | <a href="https://d2torrlf4djx10.cloudfront.net/tktpt?medbwtwji" target="_blank">阿波罗网</a> | <a href="https://divmj5v44rbg.cloudfront.net/Mjpvu?rqsnqq" target="_blank">干净世界</a> | <a href="https://d3t1om6knkjnq4.cloudfront.net/10?ueybhn" target="_blank">退党服务</a> | <a href="https://dqgl8k1bfvgsc.cloudfront.net/Rffqf?iuimg" target="_blank">明慧广播</a> | <a href="https://d1or6b2roqil0x.cloudfront.net/nw9Vn?qpddodrl" target="_blank">传奇时代</a> | <a href="https://do0q2uqs2ncwe.cloudfront.net/AF9AG?ddcaehyva" target="_blank">新境界影视</a> | <a href="https://d21y52w6f35pla.cloudfront.net/zqMQA?qdsrl" target="_blank">文昭谈论</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/7?dcjvojj" target="_blank">明慧</a></p><p><a href="https://d1lulvfep8g527.cloudfront.net/9?ktsxw" target="_blank">大法</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/3?okywf" target="_blank">新唐人</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/obAhT?xpqtath" target="_blank">人民报</a> | <a href="https://d27hok1oawuvj8.cloudfront.net/xXNHu?jniabspb" target="_blank">放光明</a> | <a href="https://di88ceki78g29.cloudfront.net/5?lhvvvyh" target="_blank">新纪元</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/6?gyllfiy" target="_blank">希望之声</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/11?xbsacvf" target="_blank">无界网络</a> | <a href="https://d26llhbq1ka51o.cloudfront.net/Pueji?bddejz" target="_blank">追查国际</a> | <a href="https://d2b68ib2p4x8t6.cloudfront.net/16?caudrlfua" target="_blank">明慧之窗</a> | <a href="https://dtjix0ckmebpi.cloudfront.net/LdvzZ?pzdedoz" target="_blank">细语人生</a> | <a href="https://dqgl8k1bfvgsc.cloudfront.net/fBn3r?zgpxkz" target="_blank">新世纪影视</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/PUWMb?dzbsf" target="_blank">江峰时刻</a> | <a href="https://d2jsgnf2snq1t5.cloudfront.net/8?hlmrkxib" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290684.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290687-AFP__20240714__36444AF__v1__Preview__UsPoliticsBidenStatement-320x200.jpg"><p align="center">川普遇袭后 拜登讲话：暴力在美国无立足地</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290684.md#1" title="川普遇袭后 拜登讲话：暴力在美国无立足地""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290687-AFP__20240714__36444AF__v1__Preview__UsPoliticsBidenStatement-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1" title="【直播】川普遇刺最新进展 记者连线""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290722-800X600-320x200.jpg">&nbsp;</a>
@@ -13,14 +13,14 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290250.md#1" title="拜登在枪击事件后与川普通话 提前返白宫""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290263-AFP__20240714__363Y8F7__v2__HighRes__PresidentialElection-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290432.md#1" title="庆独立日精神 新世纪主办“美丽的美利坚”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290491-2407140422581528-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290708.md#1">组图：法国国庆节 2024巴黎奥运火炬亮相</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290725.md#1">川普遇袭事件 FBI披露更多信息</a><br>
-:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290684.md#1">川普遇袭后 拜登讲话：暴力在美国无立足地</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290708.md#1">组图：法国国庆节 2024巴黎奥运火炬亮相</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290725.md#1">川普遇袭事件 FBI披露更多信息</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290684.md#1">川普遇袭后 拜登讲话：暴力在美国无立足地</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290673.md#1">前消防队长在川普集会上遇难 州长：降半旗悼念</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1">【直播】川普遇刺最新进展 记者连线</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290685.md#1">中共三中全会前夕 北京严密管控民众</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290029.md#1">退休后拥有舒适财务状况的15种方法</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290669.md#1">中国饮用水价格战开打 农夫山泉0.74元一瓶</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290669.md#1">中国饮用水价格战开打 农夫山泉0.74元一瓶</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290663.md#1">美联储降息 房价恐仍然不会下降</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290690.md#1">美西夏令会重返洛城 强化台美关系与传承</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
